上传和修改

--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -16,7 +16,7 @@
         <div class="login-in">
             {if condition="$user"}
                 <span class="fl" onclick="javascript:location.href='/index/user/index'">
-                    <img src="{$user.avatar}"">
+                    <img src="{$avatar}"">
                 </span>
                 <a class="outBtn fl" href="javascript:void(0)" onclick="logout()">退出</a>
             {else /}
