--- a/application/mobile/view/user/collection.html
+++ b/application/mobile/view/user/collection.html
@@ -37,9 +37,9 @@
 				</div>
 				{/volist}
 				{else/}
-				    <div>
+				    <p style="height: 75px;line-height: 75px;text-align: center;">
 						暂无数据
-					</div> 
+						</p> 
 					
 				{/if}
 				
