--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -26,7 +26,7 @@
         <!-- main -->
         <div class="personal-main">
             <!-- personal -->
-            <div class="personal-list" onclick="pageJump('../my/my_site.html')">
+            <div class="personal-list" onclick="javascript:location.href='/mobile/user/my_address'">
                 <div class="item-msg">
                     <p class="compellation">
                       
@@ -38,7 +38,7 @@
                         {$get_address['dizhi']}
                     </p>
                 </div>
-                <div class="item-img">
+                <div class="item-img"> 
                     <img src="__STATIC__/img/purchase/back-a@2x.png" alt="">
                 </div>
             </div>
