--- a/application/mobile/view/user/my_address.html
+++ b/application/mobile/view/user/my_address.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="wrap_frame">
 			<div class="lb_headWrap">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='{$return}'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
 				</p>
 				<span>我的地址</span>
