--- a/application/mobile/view/user/set_up.html
+++ b/application/mobile/view/user/set_up.html
@@ -36,7 +36,7 @@
 			<div class="avatar">
 				<div class="fl"><span>头像</span></div>
 				<div class="fr">
-					<img class="avatarPic_icon" id="avatarPic" {if condition="$user.avatar"}src="{$user.avatar}"{else /}src="/public/mobile-default-user-icon.png"{/if} />
+					<img class="avatarPic_icon" id="avatarPic" src="{$user.avatar}" onerror="this.src='/public/mobile-default-user-icon.png'"  /> 
 					<form method="POST" id="hidden-form" action="/mobile/user/set_icon" enctype="multipart/form-data" target="image-ajaxR" style="display:none;">
 						<input type="file" accept="image/*" name="icon" id="hidden-icon" />
 					</form>
@@ -110,9 +110,27 @@
 							</div>
 						</div>
 					</div>
+					{if condition="!$user['email']"}
+					<div class="item" onclick="javascript:location.href='/mobile/user/edit_email'">
+						<div class="item_top">
+							<div class="fl"><span>设置邮箱</span></div>
+							<div class="fr">
+								<img src="__STATIC__/img/my/youjian2@2x.png" />
+							</div>
+						</div>
+					</div>
+					{/if}
 					<div class="item" onclick="javascript:location.href='/mobile/index/edit_password'">
 						<div class="item_top">
 							<div class="fl"><span>修改密码</span></div>
+							<div class="fr">
+								<img src="__STATIC__/img/my/youjian2@2x.png" />
+							</div>
+						</div>
+					</div>
+					<div class="item" onclick="javascript:location.href='/mobile/index/edit_paypass'">
+						<div class="item_top">
+							<div class="fl"><span>修改支付密码</span></div>
 							<div class="fr">
 								<img src="__STATIC__/img/my/youjian2@2x.png" />
 							</div>
