--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -1,6 +1,6 @@
 <div class="inner-wrap">
     <div class="logo">
-        <!-- <a href="/index/index/index"><img src="{$web_setting.web_logo}"></a> -->
+        <a href="/index/index/index"><img  src="{$web_setting.web_logo}"></a>
     </div>
     <div class="nav">
         <ul>
