--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -29,10 +29,12 @@
                  </div>
 			</div>
 			<!--底部-->
-			<div class="footer"></div>
+			<div class="footer">
+				{include file="footer"}
+			</div>
 		</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-		<script src="__STATIC__/js/public/footer.js"></script>
+		<!-- <script src="__STATIC__/js/public/footer.js"></script> -->
 		<script type="text/javascript" src="__STATIC__/js/resigter/addres.js"></script>
 		
 
