--- a/application/index/view/buy/buy.html
+++ b/application/index/view/buy/buy.html
@@ -97,11 +97,13 @@
 			{/if}
 		</div>
 		<!-- 底部 -->
-		<div class="footer"></div>
+		<div class="footer">
+			{include file="footer"}
+		</div>
 
 	</div>
 	<script src="__STATIC__/js/public/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript" src="__STATIC__/js/public/footer.js"></script>
+	<!-- <script type="text/javascript" src="__STATIC__/js/public/footer.js"></script> -->
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 </body>
 
