--- a/application/index/view/buy/details.html
+++ b/application/index/view/buy/details.html
@@ -65,11 +65,13 @@
 				
 			</div>
 			<!-- 底部 -->
-		    <div class="footer"></div>
+		    <div class="footer">
+				{include file="footer"}
+			</div>
 		    
 		</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
+		<!-- <script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script> -->
 	</body>
 </html>
