--- a/application/index/view/buy/submit_order.html
+++ b/application/index/view/buy/submit_order.html
@@ -108,11 +108,13 @@
 				</div>
 			</div>
 			<!--底部-->
-			<div class="footer"></div>
+			<div class="footer">
+				{include file="footer"}
+			</div>
 		</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
+		<!-- <script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script> -->
 		<script>
     $('#province').on('change',function(){
         var area_id = $('#province').val();
