--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -41,7 +41,8 @@
         <!-- 解答问题 -->
         <div class="answer-questions">
             <div class="inner-wrap">
-                <h1>DNA可以解答哪些你对遗传的疑问？__STATIC__</h1>
+                <h1>DNA可以解答哪些你对遗传的疑问？</h1>
+                
                 <p>经严格筛选验证检测项目包含祖源、遗传特质、遗传风险等，每月持续上新。随着研究的不断深入,你能获得的解答远远更多。</p>
                 <ul class="answer-list">
                     <li>
@@ -165,14 +166,16 @@
         </div>
 
         <!-- 底部 -->
-        <div class="footer"></div>
+        <div class="footer">
+            {include file="footer"}
+        </div>
         
     </div>  
 
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>   
     <script src="__STATIC__/js/public/swiper.js"></script>
     <script src="__STATIC__/js/public/header.js"></script>  
-    <script src="__STATIC__/js/public/footer.js"></script>
+    <!-- <script src="__STATIC__/js/public/footer.js"></script> -->
     <script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
         /*
