--- a/application/index/view/order/index.html
+++ b/application/index/view/order/index.html
@@ -90,10 +90,12 @@
             </div>
             
             <!-- 底部 -->
-		    <div class="footer"></div>
+		    <div class="footer">
+				{include file="footer"}
+			</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
 		<script type="text/javascript" src="__STATIC__/js/public/header.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
+		<!-- <script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script> -->
 	</body>
 </html>
