--- a/application/mobile/view/user/my_order.html
+++ b/application/mobile/view/user/my_order.html
@@ -16,7 +16,7 @@
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
 				</p>
 				<span>我的订单</span>
@@ -25,185 +25,46 @@
 			<div class="contet_wrap">
 				<!--Tab切换 wrap-->
 				<div class="tab_but_box">
-					<p class="tab_but tab_but_active">全部</p>
-					<p class="tab_but">待付款</p>
-					<p class="tab_but">待发货</p>
-					<p class="tab_but">待收货</p>
-					<p class="tab_but">评价</p>
+					<p class="tab_but {if condition='$status eq 0'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=0'">全部</p>
+					<p class="tab_but {if condition='$status eq 1'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=1'">待付款</p>
+					<p class="tab_but {if condition='$status eq 2'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=2'">待发货</p>
+					<p class="tab_but {if condition='$status eq 3'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=3'">待收货</p>
+					<p class="tab_but {if condition='$status eq 4'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=4'">待评价</p>
 				</div>
 				<!--Tab => 内容 wrap-->
 				<div class="tab_wrap">
 					<!--Tab对应的 模块 box-->
 					<div class="tab_show_box">
 						<!--(循环)商品-项-->
+						{volist name="lists" id="vo" empty="<p style='height:75px;line-height:75px;text-align:center;'>暂无数据！</p>"}
 						<div class="commodity_term">
 							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">等待买家付款</span>
+								<span class="commodity_term_top_left">订单编号:&nbsp;{$vo.order_sn}</span>
+								<span class="commodity_term_top_right">{$sname[$vo.order_status]}</span>
 							</p>
 							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
+								<p class="commodity_term_bottom_left" onclick="javascript:location.href='/mobile/goods/order_info?id={$vo.id}'">
+									<img class="commodity_term_bottom_img" src="/public/images/goods/{$vo.thumb}" />
 								</p>
 								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
+									<p class="commodity_term_bottom_text" onclick="javascript:location.href='/mobile/goods/order_info?id={$vo.id}'">{$vo.name}</p>
 									<!--按钮-->
 									<div class="commodity_term_but_box">
 										<!--按钮
 											1、class='button_red'; 红色-按钮
 											2、class='button_red'; 灰色-按钮
 										-->
-										<p class="commodity_term_but button_red">付款</p>
-										<p class="commodity_term_but button_ash">取消订单</p>
+										{if condition="$vo.order_status eq 0"}
+										<p class="commodity_term_but button_red" onclick="javascript:location.href='/mobile/weixin/pay?t=order_pay&id={$vo.id}'">付款</p>
+										<!-- <p class="commodity_term_but button_ash">取消订单</p> -->
+										{/if}
 									</div>
 								</div>
 
 							</div>
 						</div>
-						<!--删-->
-						<!--(循环)商品-项-->
-						<div class="commodity_term">
-							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">交易成功</span>
-							</p>
-							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
-								</p>
-								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
-									<!--按钮-->
-									<div class="commodity_term_but_box">
-										<!--按钮
-											1、class='button_red'; 红色-按钮
-											2、class='button_red'; 灰色-按钮
-										-->
-										<p class="commodity_term_but button_red">评价</p>
-									</div>
-								</div>
-
-							</div>
-						</div>
-						<!--删-->
+						{/volist}
 					</div>
-
-					<!--代付款-->
-					<div class="tab_show_box">
-						<!--(循环)商品-项-->
-						<div class="commodity_term">
-							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">等待买家付款</span>
-							</p>
-							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
-								</p>
-								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
-									<!--按钮-->
-									<div class="commodity_term_but_box">
-										<!--按钮
-											1、class='button_red'; 红色-按钮
-											2、class='button_red'; 灰色-按钮
-										-->
-										<p class="commodity_term_but button_red">付款</p>
-										<p class="commodity_term_but button_ash">取消订单</p>
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-					</div>
-					<!--待发货-->
-					<div class="tab_show_box">
-						<!--(循环)商品-项-->
-						<div class="commodity_term">
-							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">买家已付款</span>
-							</p>
-							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
-								</p>
-								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
-									<!--按钮-->
-									<div class="commodity_term_but_box">
-										<!--按钮
-											1、class='button_red'; 红色-按钮
-											2、class='button_red'; 灰色-按钮
-										-->
-										<!--<p class="commodity_term_but button_ash">查看物流</p>-->
-										<p class="commodity_term_but button_red">取消订单</p </div>
-									</div>
-
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!--待收货-->
-					<div class="tab_show_box">
-						<!--(循环)商品-项-->
-						<div class="commodity_term">
-							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">卖家已发货</span>
-							</p>
-							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
-								</p>
-								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
-									<!--按钮-->
-									<div class="commodity_term_but_box">
-										<!--按钮
-											1、class='button_red'; 红色-按钮
-											2、class='button_red'; 灰色-按钮
-										-->
-										<p class="commodity_term_but button_red">确认收货</p>
-										<!--<p class="commodity_term_but button_ash">查看物流</p>-->
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-					</div>
-					<!--评价-->
-					<div class="tab_show_box">
-						<!--(循环)商品-项-->
-						<div class="commodity_term">
-							<p class="commodity_term_top">
-								<span class="commodity_term_top_left">订单编号:&nbsp;00000</span>
-								<span class="commodity_term_top_right">交易成功</span>
-							</p>
-							<div class="commodity_term_bottom">
-								<p class="commodity_term_bottom_left">
-									<img class="commodity_term_bottom_img" src="__STATIC__/img/public/00001_orIcon.png" />
-								</p>
-								<div class="commodity_term_bottom_right">
-									<p class="commodity_term_bottom_text">全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]全人类的历史与未来 [A Brief History of Everyone Who Ever Lived]</p>
-									<!--按钮-->
-									<div class="commodity_term_but_box">
-										<!--按钮
-											1、class='button_red'; 红色-按钮
-											2、class='button_red'; 灰色-按钮
-										-->
-										<p class="commodity_term_but button_red">评价</p>
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-					</div>
-
 				</div>
 			</div>
 
@@ -213,18 +74,7 @@
 		<script src="__STATIC__/js/public/public.js"></script>
 
 		<script>
-			$(document).ready(function() {
-				/*我的订单-Tab切换*/
-				$('.tab_but_box .tab_but').on('click', function() {
-					/*Tab的效果*/
-					$('.tab_but_box .tab_but').removeClass('tab_but_active');
-					$(this).addClass('tab_but_active');
-					/*Tab对应=>出现,隐藏 box*/
-					$('.tab_wrap .tab_show_box').hide();
-					$('.tab_wrap .tab_show_box').eq($(this).index('.tab_but')).show();
-					console.log($(this).index('.tab_but'));
-				})
-			})
+			
 		</script>
 	</body>
 
