--- a/application/mobile/view/weixin/jsapi_orderpay.html
+++ b/application/mobile/view/weixin/jsapi_orderpay.html
@@ -2,11 +2,14 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/> 
-	<title>账户充值</title>
+	<title>订单支付</title>
 	<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
 	<script type="text/javascript">
-	var sn = "{$sn}";
+    var sn = "{$sn}";
+    var order_id = "{$order_id}";
+
+
 	//调用微信JS api 支付
 	function jsApiCall()
 	{
@@ -17,15 +20,19 @@
 				WeixinJSBridge.log(res.err_msg);
 				if(res.err_msg == 'get_brand_wcpay_request:ok'){
 					// 支付成功
-					layer.open({
-						title:'提示信息',
-						content:'<p style="text-align:center;">充值成功</p><p style="text-align:center;">请点击确定，不要刷新或关闭网页</p>',
-						btn:['确定'],
-						btnAlign:'c',
-						end:function(){
-							window.location.href="/mobile/user/top_up?sn="+sn;
-						}
-					});
+					$.post('/mobile/weixin/order_pay_notify',{sn:sn,order_id:order_id},function(r){
+                        if(r.status == 1){
+                            layer.open({
+                                title:'提示信息',
+                                content:'<p style="text-align:center;">支付成功</p>',
+                                btn:['确定'],
+                                btnAlign:'c',
+                                end:function(){
+                                    window.location.href="/mobile/goods/order_info?id="+order_id;
+                                }
+                            });
+                        }
+                    });
 
 				}else if(res.err_msg == 'get_brand_wcpay_request:cancel'){
 					// 取消支付
@@ -35,18 +42,18 @@
 						btn:['返回'],
 						btnAlign:'c',
 						end:function(){
-							window.history.go(-1);
+							window.location.href="/mobile/goods/order_info?id="+order_id;
 						}
 					});
 				}else{
 					// 支付失败
 					layer.open({
 						title:'提示信息',
-						content:'<p style="text-align:center;">充值失败！</p>',
+						content:'<p style="text-align:center;">支付失败！</p>',
 						btn:['返回上一步'],
 						btnAlign:'c',
 						end:function(){
-							window.history.go(-1);
+							window.location.href="/mobile/goods/order_info?id="+order_id;
 						}
 					});
 				}
